@@ -16,6 +16,7 @@ unlink $dcpsrepo_ior;
 my $DCPSREPO = PerlDDS::create_process ("$ENV{DDS_ROOT}/bin/DCPSInfoRepo",
                                         "-NOBITS -o $dcpsrepo_ior");
 
+print STDERR $DCPSREPO->CommandLine () . "\n";
 $DCPSREPO->Spawn ();
 if (PerlACE::waitforfile_timed ($dcpsrepo_ior, 30) == -1) {
     print STDERR "ERROR: waiting for Info Repo IOR file\n";
@@ -25,6 +26,7 @@ if (PerlACE::waitforfile_timed ($dcpsrepo_ior, 30) == -1) {
 
 my $TEST = PerlDDS::create_process ('QueryConditionTest',
                                     "-DCPSConfigFile dcps.ini -DCPSBit 0 ");
+print STDERR $TEST->CommandLine () . "\n";
 my $result = $TEST->SpawnWaitKill(60);
 if ($result != 0) {
   print STDERR "ERROR: test returned $result\n";
